feat: start .main generate from DOM, add filter Templates

--- a/src/index.html
+++ b/src/index.html
@@ -23,13 +23,14 @@
   <section class="cart">
     <h4 class = "cart-title">Cart</h4>
     <p class = "cart-indicate"></p>
-    <img class = "cart-img"src="/src/assets/img/belt_red_vintage.jpg" alt="cart-img">
+    <img class = "cart-img"src="./assets/img/belt_red_vintage.jpg" alt="cart-img">
   </section>
 
 
 </header>
 
-<main class="main">
+<main class="main1">
+  <button type = 'belt'> это кнопка</button>
 <div class="sidebar">
   <div class="search-field"></div>
   <div class="filter-field"></div>
@@ -37,7 +38,12 @@
 <div class="container">
   <div class="sort-field"></div>
   <div class="catalog">
-    <div class="card"></div>
+    <div class="card">
+      <img src="./assets/img/belt_red_vintage.jpg" alt="belt_red_vintage">
+        <div class = "description">
+          <h4 class = "card-title">Belt</h4>
+          <p class = "card-price">55</p></div>
+    </div>
     <div class="card"></div>
     <div class="card"></div>
     <div class="card"></div>
